# ai-agent-lab

./: main.ipynb  main.py  pyproject.toml
assignments/langgraph/learning_face_agent/: README.md  learning_face.ipynb
assignments/langgraph/learning_face_agent_advanced/: README.md  agent.py  app.py
assignments/life-coach-agent/: app.py
assignments/life-coach-agent-2/: app.py  goals.txt
assignments/restaurant-bot/: app.py
assignments/restaurant-bot-guardrails/: app.py
assignments/story_writer_agent/: agent.py  prompts.py
assignments/story_writer_agent/.adk/: session.db
